Moved a lot of configs from global inventory
Squashed commit of the following:

commit fc4e74b6eefc117a6a8c3fbcb60997a14916fe91
Author: userusr <userusr@yandex.ru>
Date:   Mon Jan 31 15:09:26 2022 +0300

    Move config to role level

commit 638f6cc5fc0999f11f28a8034b545db44fcaa622
Author: userusr <userusr@yandex.ru>
Date:   Sun Jan 30 17:34:24 2022 +0300

    Linting

commit d1681767fc078a283d300dca0ad9f66fd189c792
Author: userusr <userusr@yandex.ru>
Date:   Tue Jan 25 09:41:57 2022 +0300

    Add Gitlab root password variable

commit 0cfcb699c21634bb948adac6bda279519fa15df3
Author: userusr <userusr@yandex.ru>
Date:   Thu Jan 20 22:36:51 2022 +0300

    Changed commands order in grafana docker file

commit b61563668d016683f0f31401b46e896a9b397c3f
Author: userusr <userusr@yandex.ru>
Date:   Thu Jan 20 12:15:48 2022 +0300

    Moved grafana config

commit 1663cbc715e0c5973298657e476433d1b76d99df
Author: userusr <userusr@yandex.ru>
Date:   Wed Jan 19 20:48:25 2022 +0300

    Moved postfix main.cf

commit fe7032fe5a71058403d062271bab85496e2b1a4b
Author: userusr <userusr@yandex.ru>
Date:   Sun Jan 16 17:27:36 2022 +0300

    Move grafana

commit bb2231d974386f13be13826ba0d6085d23269769
Author: userusr <userusr@yandex.ru>
Date:   Sun Jan 16 17:19:38 2022 +0300

    Move docker configuration

commit 13f9eb4a7c981782524847b502c1307efeeb8efa
Author: userusr <userusr@yandex.ru>
Date:   Sat Jan 15 13:07:55 2022 +0300

    Move vars from template to play

commit fd2833df2de03a48c56f9e931f341589c6b733c8
Author: userusr <userusr@yandex.ru>
Date:   Fri Jan 14 10:34:35 2022 +0300

    Move proftpd config

commit d18a36239a7d2a89a3dd9b7ae96654c5896fc929
Author: userusr <userusr@yandex.ru>
Date:   Thu Jan 13 16:41:57 2022 +0300

    Moved readonly user params

commit caa7039c8cde9b501ee5efab14eeb761879c1ea9
Author: userusr <userusr@yandex.ru>
Date:   Thu Jan 13 16:25:35 2022 +0300

    Moved davecot and postfix configs

commit 6f99e7c0bb40791b1ebef62c3a8a2ee359d515a1
Author: userusr

--- a/roles/services/tasks/caddy.yml
+++ b/roles/services/tasks/caddy.yml
@@ -3,57 +3,57 @@
   include_tasks: service_common.yml
   vars:
     - service_name: caddy
-    - service_image_dir: '{{ local_path }}/images/caddy'
+    - service_image_dir: '{{ build_path }}/images/caddy'
     - service_dirs:
         - certs
         - private
         - pki
     - service_gen_certs:
-        - "pki.{{ conf['domain'] }}"
-        - "gitlab.{{ conf['domain'] }}"
-        - "ldapadmin.{{ conf['domain'] }}"
-        - "mail.{{ conf['domain'] }}"
-        - "mattermost.{{ conf['domain'] }}"
-        - "redmine.{{ conf['domain'] }}"
-        - "registry.{{ conf['domain'] }}"
-        - "storage.{{ conf['domain'] }}"
-        - "excalidraw.{{ conf['domain'] }}"
-        - "nextcloud.{{ conf['domain'] }}"
-        - "onlyoffice.{{ conf['domain'] }}"
-        - "drawio.{{ conf['domain'] }}"
-        - "portainer.{{ conf['domain'] }}"
-        - "adminer.{{ conf['domain'] }}"
-        - "grafana.{{ conf['domain'] }}"
+        - "pki.{{ sonet_general['domain'] }}"
+        - "gitlab.{{ sonet_general['domain'] }}"
+        - "ldapadmin.{{ sonet_general['domain'] }}"
+        - "mail.{{ sonet_general['domain'] }}"
+        - "mattermost.{{ sonet_general['domain'] }}"
+        - "redmine.{{ sonet_general['domain'] }}"
+        - "registry.{{ sonet_general['domain'] }}"
+        - "storage.{{ sonet_general['domain'] }}"
+        - "excalidraw.{{ sonet_general['domain'] }}"
+        - "nextcloud.{{ sonet_general['domain'] }}"
+        - "onlyoffice.{{ sonet_general['domain'] }}"
+        - "drawio.{{ sonet_general['domain'] }}"
+        - "portainer.{{ sonet_general['domain'] }}"
+        - "adminer.{{ sonet_general['domain'] }}"
+        - "grafana.{{ sonet_general['domain'] }}"
     - service_copy_certs:
         - { src: "ca.crt", dest: "certs/ca.crt" }
         - { src: "ca.crt", dest: "pki/ca.crt" }
         - { src: "dh.pem", dest: "certs/dhparam.pem" }
-        - { src: "issued/gitlab.{{ conf['domain'] }}.crt", dest: "certs/gitlab.{{ conf['domain'] }}.crt" }
-        - { src: "private/gitlab.{{ conf['domain'] }}.key", dest: "private/gitlab.{{ conf['domain'] }}.key" }
-        - { src: "issued/mattermost.{{ conf['domain'] }}.crt", dest: "certs/mattermost.{{ conf['domain'] }}.crt" }
-        - { src: "private/mattermost.{{ conf['domain'] }}.key", dest: "private/mattermost.{{ conf['domain'] }}.key" }
-        - { src: "issued/mail.{{ conf['domain'] }}.crt", dest: "certs/mail.{{ conf['domain'] }}.crt" }
-        - { src: "private/mail.{{ conf['domain'] }}.key", dest: "private/mail.{{ conf['domain'] }}.key" }
-        - { src: "issued/registry.{{ conf['domain'] }}.crt", dest: "certs/registry.{{ conf['domain'] }}.crt" }
-        - { src: "private/registry.{{ conf['domain'] }}.key", dest: "private/registry.{{ conf['domain'] }}.key" }
-        - { src: "issued/redmine.{{ conf['domain'] }}.crt", dest: "certs/redmine.{{ conf['domain'] }}.crt" }
-        - { src: "private/redmine.{{ conf['domain'] }}.key", dest: "private/redmine.{{ conf['domain'] }}.key" }
-        - { src: "issued/ldapadmin.{{ conf['domain'] }}.crt", dest: "certs/ldapadmin.{{ conf['domain'] }}.crt" }
-        - { src: "private/ldapadmin.{{ conf['domain'] }}.key", dest: "private/ldapadmin.{{ conf['domain'] }}.key" }
-        - { src: "issued/pki.{{ conf['domain'] }}.crt", dest: "certs/pki.{{ conf['domain'] }}.crt" }
-        - { src: "private/pki.{{ conf['domain'] }}.key", dest: "private/pki.{{ conf['domain'] }}.key" }
-        - { src: "issued/excalidraw.{{ conf['domain'] }}.crt", dest: "certs/excalidraw.{{ conf['domain'] }}.crt" }
-        - { src: "private/excalidraw.{{ conf['domain'] }}.key", dest: "private/excalidraw.{{ conf['domain'] }}.key" }
-        - { src: "issued/nextcloud.{{ conf['domain'] }}.crt", dest: "certs/nextcloud.{{ conf['domain'] }}.crt" }
-        - { src: "private/nextcloud.{{ conf['domain'] }}.key", dest: "private/nextcloud.{{ conf['domain'] }}.key" }
-        - { src: "issued/onlyoffice.{{ conf['domain'] }}.crt", dest: "certs/onlyoffice.{{ conf['domain'] }}.crt" }
-        - { src: "private/onlyoffice.{{ conf['domain'] }}.key", dest: "private/onlyoffice.{{ conf['domain'] }}.key" }
-        - { src: "issued/drawio.{{ conf['domain'] }}.crt", dest: "certs/drawio.{{ conf['domain'] }}.crt" }
-        - { src: "private/drawio.{{ conf['domain'] }}.key", dest: "private/drawio.{{ conf['domain'] }}.key" }
-        - { src: "issued/portainer.{{ conf['domain'] }}.crt", dest: "certs/portainer.{{ conf['domain'] }}.crt" }
-        - { src: "private/portainer.{{ conf['domain'] }}.key", dest: "private/portainer.{{ conf['domain'] }}.key" }
-        - { src: "issued/adminer.{{ conf['domain'] }}.crt", dest: "certs/adminer.{{ conf['domain'] }}.crt" }
-        - { src: "private/adminer.{{ conf['domain'] }}.key", dest: "private/adminer.{{ conf['domain'] }}.key" }
-        - { src: "issued/grafana.{{ conf['domain'] }}.crt", dest: "certs/grafana.{{ conf['domain'] }}.crt" }
-        - { src: "private/grafana.{{ conf['domain'] }}.key", dest: "private/grafana.{{ conf['domain'] }}.key" }
+        - { src: "issued/gitlab.{{ sonet_general['domain'] }}.crt", dest: "certs/gitlab.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/gitlab.{{ sonet_general['domain'] }}.key", dest: "private/gitlab.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/mattermost.{{ sonet_general['domain'] }}.crt", dest: "certs/mattermost.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/mattermost.{{ sonet_general['domain'] }}.key", dest: "private/mattermost.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/mail.{{ sonet_general['domain'] }}.crt", dest: "certs/mail.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/mail.{{ sonet_general['domain'] }}.key", dest: "private/mail.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/registry.{{ sonet_general['domain'] }}.crt", dest: "certs/registry.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/registry.{{ sonet_general['domain'] }}.key", dest: "private/registry.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/redmine.{{ sonet_general['domain'] }}.crt", dest: "certs/redmine.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/redmine.{{ sonet_general['domain'] }}.key", dest: "private/redmine.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/ldapadmin.{{ sonet_general['domain'] }}.crt", dest: "certs/ldapadmin.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/ldapadmin.{{ sonet_general['domain'] }}.key", dest: "private/ldapadmin.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/pki.{{ sonet_general['domain'] }}.crt", dest: "certs/pki.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/pki.{{ sonet_general['domain'] }}.key", dest: "private/pki.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/excalidraw.{{ sonet_general['domain'] }}.crt", dest: "certs/excalidraw.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/excalidraw.{{ sonet_general['domain'] }}.key", dest: "private/excalidraw.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/nextcloud.{{ sonet_general['domain'] }}.crt", dest: "certs/nextcloud.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/nextcloud.{{ sonet_general['domain'] }}.key", dest: "private/nextcloud.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/onlyoffice.{{ sonet_general['domain'] }}.crt", dest: "certs/onlyoffice.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/onlyoffice.{{ sonet_general['domain'] }}.key", dest: "private/onlyoffice.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/drawio.{{ sonet_general['domain'] }}.crt", dest: "certs/drawio.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/drawio.{{ sonet_general['domain'] }}.key", dest: "private/drawio.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/portainer.{{ sonet_general['domain'] }}.crt", dest: "certs/portainer.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/portainer.{{ sonet_general['domain'] }}.key", dest: "private/portainer.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/adminer.{{ sonet_general['domain'] }}.crt", dest: "certs/adminer.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/adminer.{{ sonet_general['domain'] }}.key", dest: "private/adminer.{{ sonet_general['domain'] }}.key" }
+        - { src: "issued/grafana.{{ sonet_general['domain'] }}.crt", dest: "certs/grafana.{{ sonet_general['domain'] }}.crt" }
+        - { src: "private/grafana.{{ sonet_general['domain'] }}.key", dest: "private/grafana.{{ sonet_general['domain'] }}.key" }
   tags: [init, build, push]
