--- a/roles/services/tasks/coredns.yml
+++ b/roles/services/tasks/coredns.yml
@@ -3,7 +3,7 @@
   include_tasks: service_common.yml
   vars:
     - service_name: coredns
-    - service_image_dir: '{{ local_path }}/images/coredns'
+    - service_image_dir: '{{ build_path }}/images/coredns'
     - service_dirs:
         - zones
   tags: [init, build, push]
@@ -11,7 +11,7 @@
 - name: 'coredns : create zone files'
   template:
     src: 'coredns/zone.j2'
-    dest: "{{ local_path }}/images/coredns/zones/{{ item['zonefile'] }}"
+    dest: "{{ build_path }}/images/coredns/zones/{{ item['zonefile'] }}"
     mode: preserve
-  loop: "{{ coredns['zones'] }}"
+  loop: "{{ sonet_dns['zones'] }}"
   tags: init
