--- a/roles/services/templates/coredns/image/Dockerfile
+++ b/roles/services/templates/coredns/image/Dockerfile
@@ -1,9 +1,9 @@
 # https://hub.docker.com/_/golang?tab=tags&page=1&ordering=last_updated
-FROM golang:{{ conf['docker_tag_coredns_golang']|default("1.16.4-buster") }}
+FROM golang:{{ sonet_general['docker_tag_coredns_golang']|default("1.16.4-buster") }}
 
 LABEL project="{{ project }}"
 
-RUN git clone --depth 1 --branch {{ conf['git_tag_coredns']|default("v1.8.3") }} https://github.com/coredns/coredns.git /coredns
+RUN git clone --depth 1 --branch {{ sonet_general['git_tag_coredns']|default("v1.8.3") }} https://github.com/coredns/coredns.git /coredns
 RUN cd /coredns && make
 
 COPY entrypoint.sh /entrypoint.sh
