--- a/roles/services/templates/excalidraw/image/Dockerfile
+++ b/roles/services/templates/excalidraw/image/Dockerfile
@@ -1,4 +1,4 @@
 # https://hub.docker.com/r/excalidraw/excalidraw/tags?page=1&ordering=last_updated
-FROM excalidraw/excalidraw:{{ conf['docker_tag_excalidraw']|default("latest") }}
+FROM excalidraw/excalidraw:{{ sonet_general['docker_tag_excalidraw']|default("latest") }}
 
 LABEL project="{{ project }}"
