--- a/roles/services/templates/nextcloud_drawio/image/Dockerfile
+++ b/roles/services/templates/nextcloud_drawio/image/Dockerfile
@@ -1,4 +1,4 @@
 # https://hub.docker.com/r/jgraph/export-server/tags?page=1&ordering=last_updated
-FROM jgraph/drawio:{{ conf['docker_tag_nextcloud_drawio']|default("14.6.9") }}
+FROM jgraph/drawio:{{ sonet_general['docker_tag_nextcloud_drawio']|default("14.6.9") }}
 
 LABEL project="{{ project }}"
