--- a/roles/services/templates/nextcloud_drawio_export_server/image/Dockerfile
+++ b/roles/services/templates/nextcloud_drawio_export_server/image/Dockerfile
@@ -1,4 +1,4 @@
 # https://hub.docker.com/r/jgraph/export-server/tags?page=1&ordering=last_updated
-FROM jgraph/export-server:{{ conf['docker_tag_nextcloud_drawio_export_server']|default("latest") }}
+FROM jgraph/export-server:{{ sonet_general['docker_tag_nextcloud_drawio_export_server']|default("latest") }}
 
 LABEL project="{{ project }}"
