--- a/roles/services/templates/nextcloud_onlyoffice_ds/image/Dockerfile
+++ b/roles/services/templates/nextcloud_onlyoffice_ds/image/Dockerfile
@@ -1,4 +1,4 @@
 # https://hub.docker.com/r/onlyoffice/documentserver/tags?page=1&ordering=last_updated
-FROM onlyoffice/documentserver:{{ conf['docker_tag_nextcloud_onlyoffice_ds']|default("6.2") }}
+FROM onlyoffice/documentserver:{{ sonet_general['docker_tag_nextcloud_onlyoffice_ds']|default("6.2") }}
 
 LABEL project="{{ project }}"
