--- a/roles/services/templates/nextcloud_redis/image/Dockerfile
+++ b/roles/services/templates/nextcloud_redis/image/Dockerfile
@@ -1,4 +1,4 @@
 # https://hub.docker.com/_/redis?tab=tags&page=1&ordering=last_updated
-FROM redis:{{ conf['docker_tag_redmine_redis']|default("6.2.2") }}
+FROM redis:{{ sonet_general['docker_tag_redmine_redis']|default("6.2.2") }}
 
 LABEL project="{{ project }}"
