--- a/roles/services/templates/phpldapadmin/image/Dockerfile
+++ b/roles/services/templates/phpldapadmin/image/Dockerfile
@@ -1,4 +1,4 @@
 # https://hub.docker.com/r/osixia/phpldapadmin/tags?page=1&ordering=last_updated
-FROM osixia/phpldapadmin:{{ conf['docker_tag_phpldapadmin']|default("stable-amd64") }}
+FROM osixia/phpldapadmin:{{ sonet_general['docker_tag_phpldapadmin']|default("stable-amd64") }}
 
 LABEL project="{{ project }}"
