--- a/roles/services/templates/portainer/image/Dockerfile
+++ b/roles/services/templates/portainer/image/Dockerfile
@@ -1,4 +1,4 @@
 # https://hub.docker.com/r/portainer/portainer-ce/tags?page=1&ordering=last_updated
-FROM portainer/portainer-ce:{{ conf['docker_tag_portainer']|default("linux-amd64-2.1.1") }}
+FROM portainer/portainer-ce:{{ sonet_general['docker_tag_portainer']|default("linux-amd64-2.1.1") }}
 
 LABEL project="{{ project }}"
