--- a/roles/services/templates/prometheus/image/Dockerfile
+++ b/roles/services/templates/prometheus/image/Dockerfile
@@ -1,4 +1,4 @@
-FROM prom/prometheus:{{ conf['docker_tag_prometheus']|default("v2.27.1") }}
+FROM prom/prometheus:{{ sonet_general['docker_tag_prometheus']|default("v2.27.1") }}
 
 LABEL project="{{ project }}"
 
