--- a/roles/services/templates/redmine/image/Dockerfile
+++ b/roles/services/templates/redmine/image/Dockerfile
@@ -1,4 +1,4 @@
-FROM redmine:{{ conf['docker_tag_redmine']|default("4.2.1-passenger") }}
+FROM redmine:{{ sonet_general['docker_tag_redmine']|default("4.2.1-passenger") }}
 
 LABEL project="{{ project }}"
 
@@ -13,9 +13,6 @@ RUN apt-get -y update \
   && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN gem install rmagick
-
-COPY service/redmine/db/migrate/20200916115806_add_ldap.rb /usr/src/redmine/db/migrate/20200916115806_add_ldap.rb
-COPY service/redmine/config/configuration.yml /usr/src/redmine/config/configuration.yml
 
 COPY service/redmine/plugins/ /plugins
 COPY service/redmine/themes/ /themes
@@ -35,5 +32,8 @@ RUN chown -R redmine:redmine /usr/src/redmine/plugins/
 WORKDIR /usr/src/redmine/
 
 RUN BUNDLER_WITHOUT="development test" bundle install
+
+COPY service/redmine/db/migrate/20200916115806_add_ldap.rb /usr/src/redmine/db/migrate/20200916115806_add_ldap.rb
+COPY service/redmine/config/configuration.yml /usr/src/redmine/config/configuration.yml
 
 CMD ["passenger", "start"]
