--- a/roles/services/templates/redminedb/image/Dockerfile
+++ b/roles/services/templates/redminedb/image/Dockerfile
@@ -1,4 +1,4 @@
 # https://hub.docker.com/_/postgres?tab=tags&page=1&ordering=last_updated
-FROM postgres:{{ conf['docker_tag_redmine_postgres']|default("13") }}
+FROM postgres:{{ sonet_general['docker_tag_redmine_postgres']|default("13") }}
 
 LABEL project="{{ project }}"
