--- a/roles/services/tasks/storage.yml
+++ b/roles/services/tasks/storage.yml
@@ -3,14 +3,14 @@
   include_tasks: service_common.yml
   vars:
     - service_name: storage
-    - service_image_dir: '{{ local_path }}/images/storage'
+    - service_image_dir: '{{ build_path }}/images/storage'
     - service_dirs:
         - service/proftpd/certs
     - service_gen_certs:
-        - "storage.{{ conf['domain'] }}"
+        - "storage.{{ sonet_general['domain'] }}"
     - service_copy_certs:
         - { src: "ca.crt", dest: "service/proftpd/certs/ca.crt" }
         - { src: "dh.pem", dest: "service/proftpd/certs/dhparam.pem" }
-        - { src: "issued/storage.{{ conf['domain'] }}.crt", dest: "service/proftpd/certs/cert.crt" }
-        - { src: "private/storage.{{ conf['domain'] }}.key", dest: "service/proftpd/certs/cert.key" }
+        - { src: "issued/storage.{{ sonet_general['domain'] }}.crt", dest: "service/proftpd/certs/cert.crt" }
+        - { src: "private/storage.{{ sonet_general['domain'] }}.key", dest: "service/proftpd/certs/cert.key" }
   tags: [init, build, push]
