--- a/roles/services/templates/cadvisor/image/Dockerfile
+++ b/roles/services/templates/cadvisor/image/Dockerfile
@@ -1,3 +1,3 @@
-FROM gcr.io/google-containers/cadvisor:{{ conf['docker_tag_cadvisor']|default("v0.33.0") }}
+FROM gcr.io/google-containers/cadvisor:{{ sonet_general['docker_tag_cadvisor']|default("v0.33.0") }}
 
 LABEL project="{{ project }}"
