--- a/roles/services/templates/grafana-image-renderer/image/Dockerfile
+++ b/roles/services/templates/grafana-image-renderer/image/Dockerfile
@@ -1,3 +1,3 @@
-FROM grafana/grafana-image-renderer:{{ conf['docker_tag_grafana-image-renderer']|default("2.1.1") }}
+FROM grafana/grafana-image-renderer:{{ sonet_general['docker_tag_grafana-image-renderer']|default("2.1.1") }}
 
 LABEL project="{{ project }}"
