--- a/roles/services/templates/grafana/image/conf/ldap.toml
+++ b/roles/services/templates/grafana/image/conf/ldap.toml
@@ -4,7 +4,7 @@
 
 [[servers]]
 # Ldap server host (specify multiple hosts space separated)
-host = "{{ grafana['ldap_host'] }}"
+host = "{{ sonet_grafana['ldap_host'] }}"
 # Default port is 389 or 636 if use_ssl = true
 port = 389
 # Set to true if LDAP server should use an encrypted TLS connection (either with STARTTLS or LDAPS)
@@ -20,16 +20,16 @@ ssl_skip_verify = false
 # client_key = "/path/to/client.key"
 
 # Search user bind dn
-bind_dn = "{{ grafana['ldap_account'] }}"
+bind_dn = "{{ sonet_grafana['ldap_account'] }}"
 # Search user bind password
 # If the password contains # or ; you have to wrap it with triple quotes. Ex """#password;"""
-bind_password = """{{ grafana['ldap_account_password'] }}"""
+bind_password = """{{ sonet_grafana['ldap_account_password'] }}"""
 
 # User search filter, for example "(cn=%s)" or "(sAMAccountName=%s)" or "(uid=%s)"
-search_filter = "{{ grafana['ldap_search_filter'] }}"
+search_filter = "{{ sonet_grafana['ldap_search_filter'] }}"
 
 # An array of base dns to search through
-search_base_dns = ["{{ grafana['ldap_base_dn'] }}"]
+search_base_dns = ["{{ sonet_grafana['ldap_base_dn'] }}"]
 
 ## For Posix or LDAP setups that does not support member_of attribute you can define the below settings
 ## Please check grafana LDAP docs for examples
@@ -39,15 +39,15 @@ search_base_dns = ["{{ grafana['ldap_base_dn'] }}"]
 
 # Specify names of the ldap attributes your ldap uses
 [servers.attributes]
-name = "{{ grafana['ldap_name'] }}"
-surname = "{{ grafana['ldap_surname'] }}"
-username = "{{ grafana['ldap_username'] }}"
-member_of = "{{ grafana['ldap_member_of'] }}"
-email =  "{{ grafana['ldap_email'] }}"
+name = "{{ sonet_grafana['ldap_name'] }}"
+surname = "{{ sonet_grafana['ldap_surname'] }}"
+username = "{{ sonet_grafana['ldap_username'] }}"
+member_of = "{{ sonet_grafana['ldap_member_of'] }}"
+email =  "{{ sonet_grafana['ldap_email'] }}"
 
 # Map ldap groups to grafana org roles
 [[servers.group_mappings]]
-group_dn = "{{ grafana['admin_group_dn'] }}"
+group_dn = "{{ sonet_grafana['admin_group_dn'] }}"
 org_role = "Admin"
 # To make user an instance admin  (Grafana Admin) uncomment line below
 # grafana_admin = true
@@ -55,7 +55,7 @@ org_role = "Admin"
 # org_id = 1
 
 [[servers.group_mappings]]
-group_dn = "{{ grafana['editor_group_dn'] }}"
+group_dn = "{{ sonet_grafana['editor_group_dn'] }}"
 org_role = "Editor"
 
 [[servers.group_mappings]]
