--- a/roles/services/templates/mailserv/image/service/dovecot/assets/config/conf.d/10-ssl.conf
+++ b/roles/services/templates/mailserv/image/service/dovecot/assets/config/conf.d/10-ssl.conf
@@ -10,8 +10,8 @@ ssl = required
 # ssl_cert = </etc/ssl/certs/dovecot.pem
 # ssl_key = </etc/ssl/private/dovecot.pem
 
-ssl_cert = </etc/postfix/certs/{{ mailserv['ssl_crt_filename'] }}
-ssl_key = </etc/postfix/certs/{{ mailserv['ssl_key_filename'] }}
+ssl_cert = </etc/postfix/certs/{{ sonet_mailserv['ssl_crt_filename'] }}
+ssl_key = </etc/postfix/certs/{{ sonet_mailserv['ssl_key_filename'] }}
 
 ssl_protocols = !SSLv3
 ssl_cipher_list = ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
