--- a/roles/services/templates/mailserv/image/service/dovecot/assets/config/conf.d/11-ssl-local-name.conf
+++ b/roles/services/templates/mailserv/image/service/dovecot/assets/config/conf.d/11-ssl-local-name.conf
@@ -1,4 +1,4 @@
-local_name {{ mailserv['hostname'] }} {
-  ssl_cert = </etc/postfix/certs/{{ mailserv['ssl_crt_filename'] }}
-  ssl_key = </etc/postfix/certs/{{ mailserv['ssl_key_filename'] }}
+local_name {{ sonet_mailserv['hostname'] }} {
+  ssl_cert = </etc/postfix/certs/{{ sonet_mailserv['ssl_crt_filename'] }}
+  ssl_key = </etc/postfix/certs/{{ sonet_mailserv['ssl_key_filename'] }}
 }
