--- a/roles/services/templates/node-exporter/image/Dockerfile
+++ b/roles/services/templates/node-exporter/image/Dockerfile
@@ -1,3 +1,3 @@
-FROM prom/node-exporter:{{ conf['docker_tag_node-exporter']|default("v1.1.2") }}
+FROM prom/node-exporter:{{ sonet_general['docker_tag_node-exporter']|default("v1.1.2") }}
 
 LABEL project="{{ project }}"
