--- a/roles/services/templates/pushgateway/image/Dockerfile
+++ b/roles/services/templates/pushgateway/image/Dockerfile
@@ -1,3 +1,3 @@
-FROM prom/pushgateway:{{ conf['docker_tag_pushgateway']|default("v1.4.1") }}
+FROM prom/pushgateway:{{ sonet_general['docker_tag_pushgateway']|default("v1.4.1") }}
 
 LABEL project="{{ project }}"
