--- a/roles/services/tasks/redmine.yml
+++ b/roles/services/tasks/redmine.yml
@@ -18,8 +18,7 @@
 
 - name: 'redmine : get plugins and themes'
   include_tasks: helper_get_url.yml
-  loop: "{{ sonet_redmine['plugins_and_themes'] }}"
-  when: redmine.plugins_and_themes is defined
+  loop: "{{ sonet_redmine['plugins_and_themes']|default([]) }}"
   tags: init
 
 - name: 'redmine : copy plugins'
