Fix redmine plugin unzip

--- a/roles/services/templates/redmine/image/Dockerfile
+++ b/roles/services/templates/redmine/image/Dockerfile
@@ -20,8 +20,10 @@ COPY service/redmine/themes/ /themes
 RUN find /plugins -maxdepth 1 -mindepth 1 -name "*.zip" -exec unzip -d /usr/src/redmine/plugins/ {} \;
 RUN find /themes -maxdepth 1 -mindepth 1 -name "*.zip" -exec unzip -d /usr/src/redmine/public/themes/ {} \;
 
-RUN find /usr/src/redmine/plugins -maxdepth 1 -mindepth 1 -type d -name "*-master" | perl -pe 'print $_; s/(.*)-master$/$1/' | xargs -r -d "\n" -n2 mv
-RUN find /usr/src/redmine/public/themes -maxdepth 1 -mindepth 1 -type d -name "*-master" | perl -pe 'print $_; s/(.*)-master$/$1/' | xargs -r -d "\n" -n2 mv
+RUN find /usr/src/redmine/plugins -maxdepth 1 -mindepth 1 -type d | perl -ne 'chomp; system("mv $_ $1") if /^(.*)-(main|master|\d+\.\d+\.\d+)$/'
+RUN find /usr/src/redmine/public/themes -maxdepth 1 -mindepth 1 -type d | perl -ne 'chomp; system("mv $_ $1") if /^(.*)-(main|master|\d+\.\d+\.\d+)$/'
+RUN echo " ==== plugins"; cd /usr/src/redmine/plugins && find . -maxdepth 1 -mindepth 1 -type d | sort
+RUN echo " ==== themes"; cd /usr/src/redmine/public/themes && find . -maxdepth 1 -mindepth 1 -type d | sort
 
 RUN find /plugins -maxdepth 1 -mindepth 1 -type d -exec cp -r {} /usr/src/redmine/plugins/ \;
 RUN find /themes -maxdepth 1 -mindepth 1 -type d -exec cp -r {} /usr/src/redmine/public/themes/ \;
